--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: Notify slack
         id: notify
-        uses: transferwise/actions-slack-notify
+        uses: transferwise/actions-slack-notify@main
         with:
           text: ${{ inputs.text }}
           channel: ${{ inputs.channel }}
