--- a/.github/workflows/test-reuse.yaml
+++ b/.github/workflows/test-reuse.yaml
@@ -13,7 +13,7 @@ on:
 jobs:
   notify:
     name: Notify slack
-    uses: transferwise/actions-slack-notify/run.yml@main
+    uses: transferwise/actions-slack-notify/.github/workflows/run.yml@main
     with:
       text:    ${{ inputs.text }}
       channel: ${{ inputs.channel }}
