--- a/.github/workflows/test-reuse.yaml
+++ b/.github/workflows/test-reuse.yaml
@@ -20,6 +20,6 @@ jobs:
     name: Notify slack
     uses: transferwise/actions-slack-notify/.github/workflows/run.yml@main
     with:
-      text:    "${{ inputs.text }}"
-      channel: "${{ inputs.channel }}"
-      token:   "${{ inputs.token }}"
+      text:    ${{ github.event.inputs.text }}"
+      channel: ${{ github.event.inputs.channel }}
+      token:   ${{ github.event.inputs.token }}
