Invalid input, token is not defined in the referenced workflow.

--- a/.github/workflows/test-reuse.yaml
+++ b/.github/workflows/test-reuse.yaml
@@ -22,4 +22,5 @@ jobs:
     with:
       text:    ${{ github.event.inputs.text }}"
       channel: ${{ github.event.inputs.channel }}
+    secrets:
       token:   ${{ github.event.inputs.token }}
