escapes in json

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -39,11 +39,11 @@ jobs:
           RESULT=$( curl --location --request POST 'https://slack.com/api/chat.postMessage' \
           --header 'Content-Type: application/json' \
           --header "Authorization: Bearer $TOKEN" \
-          --data-raw '{
-              "text": ":github: ${{ inputs.text }}", 
-              "channel": "${{ inputs.channel }}", 
-              "as_user": "True"
-          }' )
+          --data-raw "{
+              \"text\":    \":github: ${{ inputs.text }}\", 
+              \"channel\": \"${{ inputs.channel }}\", 
+              \"as_user\": \"True\"
+          }" )
           SUCCESS=$( echo $RESULT | jq -r '.ok' )
 
           echo "::set-output name=success::$(echo $SUCCESS)"
