--- a/action.yml
+++ b/action.yml
@@ -34,7 +34,7 @@ runs:
       run: |
         echo "Notifying ${{ inputs.channel }} via Slack..."
         
-        #TEXT=$( sed -E 's/([^\]|^)"/\1\\"/g' <<< ${{ inputs.text }} )
+        #TEXT=$( sed -E 's/([^\]|^)"/\1\\"/g' <<< inputs.text )
         TEXT=${{ inputs.text }}
         
         echo "TEXT is:"
