--- a/action.yml
+++ b/action.yml
@@ -31,11 +31,9 @@ runs:
       shell: bash
       env:
         TOKEN: ${{ inputs.token }}
+        TEXT:  ${{ inputs.text }}
       run: |
         echo "Notifying ${{ inputs.channel }} via Slack..."
-        
-        #TEXT=$( sed -E 's/([^\]|^)"/\1\\"/g' <<< inputs.text )
-        TEXT=${{ inputs.text }}
         
         echo "TEXT is:"
         echo $TEXT
